// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logger diagnosticToTerminalLog get error 1`] = `
" ERROR(ESLint)  Unexpected var, use let or const instead.
 FILE  /Users/vite-plugin-checker/playground/vanilla-ts/src/main.ts:3:1

    1 | import { text } from './text'
    2 |
  > 3 | var hello = 'Hello'
      | ^^^^^^^^^^^^^^^^^^^
    4 |
    5 | const rootDom = document.querySelector('#root')!
    6 | rootDom.innerHTML = hello + text
"
`;

exports[`logger diagnosticToTerminalLog get warning 1`] = `
" WARNING(ESLint)  Unexpected var, use let or const instead.
 FILE  /Users/vite-plugin-checker/playground/vanilla-ts/src/main.ts:3:1

    1 | import { text } from './text'
    2 |
  > 3 | var hello = 'Hello'
      | ^^^^^^^^^^^^^^^^^^^
    4 |
    5 | const rootDom = document.querySelector('#root')!
    6 | rootDom.innerHTML = hello + text
"
`;
